# quotescape

./: .gitignore  LICENSE  Makefile  README.md  SPEC.md  install.bat  install.sh  prepare_release.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_quotescape.py  setup.py
config/: quotescape.yaml
examples/: custom_quotebook.json  kindle_secrets.json  quotescape_full.yaml  quotescape_minimal.yaml
src/quotescape/: __init__.py  config.py  main.py
src/quotescape/generators/: __init__.py  wallpaper.py
src/quotescape/scrapers/: __init__.py  kindle.py
src/quotescape/sources/: __init__.py  base.py  custom.py  kindle.py  random.py
tests/: test_api.py  test_quotescape.py
